# Keket

./: .gitignore  404.html  Cargo.toml  README.md  index.html  introduction.html  justfile  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: gh-pages.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/database/: events.md  handle.md  life_cycle.md  path.md  reference.md  self.md
book/src/fetch/: async.md  client.md  collections.md  container.md  deferred.md  extract.md  fallback.md  file.md  hot_reload.md  http.md  redb.md  rewrite.md  router.md  self.md
book/src/protocol/: bundle.md  bytes.md  group.md  self.md  text.md
book/src/scenarios/: ingame.md  self.md
crate/: Cargo.toml
crate/examples/: hello_world.rs  zip.rs
crate/src/database/: mod.rs  path.rs  reference.rs
crate/src/fetch/: collections.rs  container.rs  file.rs  mod.rs
crate/src/protocol/: mod.rs  serde.rs
crates/_/: Cargo.toml
crates/_/examples/: 01_hello_world.rs  02_zip.rs  03_dependencies.rs  04_deferred_fetch.rs  04_events.rs  05_deferred_fetch.rs  06_dlcs_asset_packs.rs  06_router_fetch.rs  07_fallback.rs  07_hot_reloading.rs  08_dlcs_asset_packs.rs  08_ingame.rs  09_hot_reloading.rs  10_custom_protocol_simple.rs  10_references.rs  11_custom_protocol_advanced.rs  11_custom_protocol_simple.rs  12_custom_protocol_advanced.rs  13_custom_fetch.rs  14_assets_versioning.rs  15_localized_assets.rs  16_extract_from_asset.rs  17_smart_references.rs  18_temporary_fetch.rs  19_loading_progress.rs  20_consumed_asset_load.rs  21_store_asset.rs  22_store_custom_asset.rs  23_future_fetch.rs  23_tokio_axum.rs  24_future_fetch.rs  24_future_store.rs  25_future_store.rs  25_tokio_axum.rs  26_throttled_fetch.rs  27_future_protocol.rs  28_protocol_extract.rs  hello_world.rs  ingame.rs
crates/_/src/: lib.rs
crates/_/src/database/: events.rs  handle.rs  inspector.rs  loading.rs  mod.rs  path.rs  reference.rs  tags.rs  tracker.rs
crates/_/src/fetch/: collections.rs  container.rs  deferred.rs  extract.rs  fallback.rs  file.rs  future.rs  hotreload.rs  mod.rs  rewrite.rs  router.rs  throttled.rs
crates/_/src/protocol/: bundle.rs  bytes.rs  closure.rs  future.rs  group.rs  mod.rs  text.rs
crates/_/src/store/: file.rs  future.rs  mod.rs
crates/client/: Cargo.toml
crates/client/examples/: hello_client.rs
crates/client/src/: lib.rs
crates/fjall/: Cargo.toml
crates/fjall-pack/: Cargo.toml
crates/fjall-pack/src/: main.rs
crates/fjall/examples/: hello_fjall.rs
crates/fjall/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph-derive/: Cargo.toml
crates/graph-derive/src/: lib.rs
crates/graph/examples/: hello_graph.rs
crates/graph/src/: lib.rs  node.rs  protocol.rs
crates/http/: Cargo.toml
crates/http/examples/: 01_hello_world.rs  hello_http.rs
crates/http/src/: lib.rs
crates/redb/: Cargo.toml
crates/redb-pack/: Cargo.toml
crates/redb-pack/src/: main.rs
crates/redb/examples/: hello_redb.rs
crates/redb/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
database/: events.html  handle.html  life_cycle.html  path.html  reference.html  self.html
fetch/: async.html  client.html  collections.html  container.html  deferred.html  extract.html  fallback.html  file.html  hot_reload.html  http.html  redb.html  rewrite.html  router.html  self.html
protocol/: bundle.html  bytes.html  group.html  self.html  text.html
resources/: cat.txt  group.txt  image.fs  image.shader  image.vs  ingame.txt  ipsum.txt  logo.txt  lorem.txt  part1.json  part2.json  part3.json  person.json  prefab.json
scenarios/: ingame.html  self.html
