[package]
name = "keket"
version = "0.14.3"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Database-like Asset management on top of ECS storage"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket"
readme = "../../README.md"

[features]
default = ["hotreload"]
hotreload = ["notify"]

[dependencies]
anput = "0.15"
serde = { version = "1", features = ["derive"] }
notify = { version = "8.0", optional = true }

[dev-dependencies]
serde_json = "1"
zip = "4.1"
spitfire = { version = "0.34", features = ["draw", "glow"] }
png = "0.17"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }

[[example]]
doc-scrape-examples = true
name = "01_hello_world"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
