[package]
name = "keket-client"
version = "0.18.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Asset server client fetch engine for Keket toolkit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket-client"
readme = "../../README.md"

[dependencies]
keket = { version = "0.18", path = "../_" }
reqwest = { version = "0.12", features = ["blocking"] }
tungstenite = "0.27"

[[example]]
doc-scrape-examples = true
name = "hello_client"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
