[package]
name = "keket-graph"
version = "0.15.6"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Asset graph module for Keket toolkit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket-graph"
readme = "../../README.md"

[features]
derive = ["keket-graph-derive"]

[dependencies]
keket = { version = "0.15", path = "../_" }
serde = { version = "1", features = ["derive"] }
keket-graph-derive = { version = "0.15", path = "../graph-derive", optional = true }

[dev-dependencies]
serde_json = "1"
keket-graph-derive = { version = "0.15", path = "../graph-derive" }

[[example]]
doc-scrape-examples = true
name = "hello_graph"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
