[package]
name = "keket-http"
version = "0.14.4"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "HTTP asset fetch engine for Keket toolkit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket-http"
readme = "../../README.md"

[dependencies]
keket = { version = "0.14", path = "../_" }
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
serde_json = "1"

[[example]]
doc-scrape-examples = true
name = "hello_http"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
