[package]
name = "keket-redb"
version = "0.11.1"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "REDB asset fetch for Keket toolkit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket-redb"
readme = "../../README.md"

[dependencies]
keket = { version = "0.11", path = "../_" }
redb = "2.4"

[dev-dependencies]
serde_json = "1"
