[package]
name = "keket-redb"
version = "0.20.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "REDB asset fetch for Keket toolkit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket-redb"
readme = "../../README.md"

[dependencies]
keket = { version = "0.20", path = "../_" }
redb = "3.0"

[dev-dependencies]
serde_json = "1"

[[example]]
doc-scrape-examples = true
name = "hello_redb"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
