[package]
name = "keket-server"
version = "0.12.2"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Asset server for Keket toolkit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/keket"
repository = "https://github.com/PsichiX/keket"
documentation = "https://docs.rs/keket-server"
readme = "../../README.md"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
notify = "8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
